navbar and banner initated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- DAISY UI  -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+
+    <!-- Font Aweosome -->
+     <script src="https://kit.fontawesome.com/d5cda55964.js" crossorigin="anonymous"></script>
     <title>Assignment 6</title>
 </head>
+
 <body>
+
+    <!-- Navbar -->
+     <div class="navbar bg-base-100 shadow-sm">
+  <div class="navbar-start">
+    <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="-1"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li><a>Home</a></li>
+        <li><a>Products</a></li>
+        <li><a>About</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </div>
+    <a class="btn btn-ghost text-xl">SwiftCart</a>
+  </div>
+  <div class="navbar-center hidden lg:flex">
+    <ul class="menu menu-horizontal px-1">
+      <li><a>Home</a></li>
+        <li><a>Products</a></li>
+        <li><a>About</a></li>
+        <li><a>Contact</a></li>
+    </ul>
+  </div>
+  <div class="navbar-end">
+    <a class="btn ">Cart</a>
+    <!-- <i class="fa-solid fa-cart-shopping"></i> -->
     
+  </div>
+</div>
+
+
+
+    <!-- Banner -->
+    <div class="hero min-h-screen" style="background-image: url(Assets/banner-image.png);">
+        <div class="hero-overlay"></div>
+        <div class="hero-content text-neutral-content text-center">
+            <div class="max-w-md">
+                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <p class="mb-5">
+                    Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                    quasi. In deleniti eaque aut repudiandae et a id nisi.
+                </p>
+                <button class="btn btn-primary">Get Started</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Features/Why Choose us -->
+
+
+
+    <!-- Trending/ Top Rated -->
+
+
+
+
+    <!-- Newsletter -->
+
+
+
+    <!-- Footer -->
+
+
+
 </body>
+
 </html>
