submission line added

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
     <!-- Banner -->
     <div class="hero min-h-screen" style="background-image: url(Assets/banner-image.png);">
         <div class="hero-overlay"></div>
-        <div class="hero-content text-neutral-content text-center">
+        <div class="hero-content text-neutral-content text-left">
             <div class="max-w-md">
-                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <h1 class="mb-5 text-4xl font-bold">Best Collection For You</h1>
                 <p class="mb-5">
-                    Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                    quasi. In deleniti eaque aut repudiandae et a id nisi.
+                    Discover the latest trends in fashion, electronics and more. Shop with confidence and style at SwiftCart.
                 </p>
-                <button class="btn btn-primary">Get Started</button>
+                <button class="btn btn-primary">Shop Now</button>
             </div>
         </div>
     </div>
