--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 
     <!-- Font Aweosome -->
-    <!-- <script src="https://kit.fontawesome.com/d5cda55964.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,7 +31,7 @@
                 <ul tabindex="-1"
                     class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
                     <li><a>Home</a></li>
-                    <li><a>Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a>About</a></li>
                     <li><a>Contact</a></li>
                 </ul>
@@ -42,7 +41,7 @@
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li><a>Home</a></li>
-                <li><a>Products</a></li>
+                <li><a href="products.html">Products</a></li>
                 <li><a>About</a></li>
                 <li><a>Contact</a></li>
             </ul>
@@ -61,7 +60,8 @@
             <div class="max-w-md">
                 <h1 class="mb-5 text-4xl font-bold">Best Collection For You</h1>
                 <p class="mb-5">
-                    Discover the latest trends in fashion, electronics and more. Shop with confidence and style at SwiftCart.
+                    Discover the latest trends in fashion, electronics and more. Shop with confidence and style at
+                    SwiftCart.
                 </p>
                 <button class="btn btn-primary">Shop Now</button>
             </div>
@@ -71,13 +71,13 @@
 
     <!-- Features/Why Choose us -->
 
-    <div class="p-5">
+    <div class="p-5 mb-1 ">
         <h2 class="flex items-center justify-center font-black text-3xl">Why Choose us</h2>
         <h5 class="flex items-center justify-center font-normal text-lg">We provide the best shopping experience with
             top-notch services</h5>
 
-        <div class="grid grid-cols-4 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-4 p-5 ">
-            <div class="card bg-base-100 w-96 shadow-sm col-span-1 ">
+        <div class="grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-4 p-5 ">
+            <div class="card bg-base-100 w-96 shadow-sm col-span-1  ">
                 <div class="card-actions justify-first">
                     <button class="btn btn-primary"><i class="fa-solid fa-truck-moving"></i></button>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="card bg-base-100 w-96 shadow-sm col-span-1">
+            <div class="card bg-base-100 w-96 shadow-sm col-span-1 ">
                 <div class="card-actions justify-first">
                     <button class="btn btn-primary"><i class="fa-regular fa-headphones"></i></button>
                 </div>
@@ -127,6 +127,84 @@
     <!-- Trending/ Top Rated -->
     <h1 class="font-black text-3xl p-5">Trending Now</h1>
 
+    <!-- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="card bg-base-100 w-96 shadow-sm  gap-5 bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden " id="data-container">
+            <figure>
+                <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp" alt="Shoes" />
+            </figure>
+            <span class="badge badge-xs badge-warning mt-2 ml-2">Category</span>
+            <div class="card-body">
+                <h2 class="card-title">Card Title</h2>
+                <span class="text-xl">$29/mo</span>
+                <div class="card-actions flex justify-between">
+                    <button class="btn btn-primary">Buy Now</button>
+                    <button class="btn btn-primary">Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- Grid Container -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="data-container">
+      
+      <!-- Card 1 -->
+      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
+        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
+        <div class="p-5">
+          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
+          <p class="text-gray-600 text-sm mb-4">
+            Short description about the product goes here.
+          </p>
+          <div class="flex justify-between items-center">
+            <span class="text-lg font-bold text-indigo-600">$99</span>
+            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
+              Buy Now
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
+        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
+        <div class="p-5">
+          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
+          <p class="text-gray-600 text-sm mb-4">
+            Short description about the product goes here.
+          </p>
+          <div class="flex justify-between items-center">
+            <span class="text-lg font-bold text-indigo-600">$79</span>
+            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
+              Buy Now
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
+        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
+        <div class="p-5">
+          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
+          <p class="text-gray-600 text-sm mb-4">
+            Short description about the product goes here.
+          </p>
+          <div class="flex justify-between items-center">
+            <span class="text-lg font-bold text-indigo-600">$59</span>
+            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
+              Buy Now
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+
+
 
 
 
@@ -143,7 +221,8 @@
     <footer class="footer sm:footer-horizontal bg-base-200 text-base-content p-10 ">
         <nav>
             <h6 class="footer-title font-black ">SwiftCart</h6>
-            <p class="font-normal text-lg">Your one-stop shop for all your fashion <br>and lifestyle needs. Quality products, fast <br>delivery, and excellent support.</p>
+            <p class="font-normal text-lg">Your one-stop shop for all your fashion <br>and lifestyle needs. Quality
+                products, fast <br>delivery, and excellent support.</p>
         </nav>
         <nav>
             <h6 class="footer-title">Company</h6>
@@ -158,20 +237,17 @@
             <a class="link link-hover">Privacy policy</a>
             <a class="link link-hover">Cookie policy</a>
         </nav>
-         <form>
-    <h6 class="footer-title">SUBSCRIBE TO OUR NEWSLETTERr</h6>
-    <p>The latest news, atricle and ewsources, <br>sent to your inbox weekly.</p>
-    <fieldset class="w-80 ">
-      <!-- <label>Enter your email address</label> -->
-      <div class="join">
-        <input
-          type="text"
-          placeholder="username@site.com"
-          class="input input-bordered join-item " />
-        <button class="btn btn-primary join-item ">Subscribe</button>
-      </div>
-    </fieldset>
-  </form>
+        <form>
+            <h6 class="footer-title">SUBSCRIBE TO OUR NEWSLETTERr</h6>
+            <p>The latest news, atricle and ewsources, <br>sent to your inbox weekly.</p>
+            <fieldset class="w-80 ">
+                <!-- <label>Enter your email address</label> -->
+                <div class="join">
+                    <input type="text" placeholder="username@site.com" class="input input-bordered join-item " />
+                    <button class="btn btn-primary join-item ">Subscribe</button>
+                </div>
+            </fieldset>
+        </form>
     </footer>
     <footer class="footer bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
         <aside class="grid-flow-col items-center">
@@ -217,7 +293,7 @@
         </nav>
     </footer>
 
-
+    <script src="script/index.js"></script>
 </body>
 
 </html>
