--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul tabindex="-1"
                     class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                    <li><a>Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a>About</a></li>
                     <li><a>Contact</a></li>
@@ -40,7 +40,7 @@
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
-                <li><a>Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a>About</a></li>
                 <li><a>Contact</a></li>
@@ -127,76 +127,35 @@
     <!-- Trending/ Top Rated -->
     <h1 class="font-black text-3xl p-5">Trending Now</h1>
 
-    <!-- <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="card bg-base-100 w-96 shadow-sm  gap-5 bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden " id="data-container">
-            <figure>
-                <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp" alt="Shoes" />
-            </figure>
-            <span class="badge badge-xs badge-warning mt-2 ml-2">Category</span>
-            <div class="card-body">
-                <h2 class="card-title">Card Title</h2>
-                <span class="text-xl">$29/mo</span>
-                <div class="card-actions flex justify-between">
-                    <button class="btn btn-primary">Buy Now</button>
-                    <button class="btn btn-primary">Buy Now</button>
-                </div>
+    <!-- Container -->
+    <div class="max-w-6xl mx-auto px-4 py-10">
+
+        <!-- Grid -->
+        <div class="grid grid-cols-3 gap-6" id="data-container2">
+
+            <!-- Card -->
+            <div class="bg-white rounded-lg shadow p-4" >
+                <!-- <img src="https://via.placeholder.com/300x200" class="w-full h-40 object-cover rounded">
+                <h2 class="text-lg font-semibold mt-3">Product 1</h2>
+                <p class="text-gray-600 text-sm mt-1">Short description</p>
+                <p class="text-indigo-600 font-bold mt-2">$50</p> -->
             </div>
-        </div>
-    </div> -->
-    <!-- Grid Container -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="data-container">
-      
-      <!-- Card 1 -->
-      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
-        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
-        <div class="p-5">
-          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
-          <p class="text-gray-600 text-sm mb-4">
-            Short description about the product goes here.
-          </p>
-          <div class="flex justify-between items-center">
-            <span class="text-lg font-bold text-indigo-600">$99</span>
-            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
-              Buy Now
-            </button>
-          </div>
-        </div>
-      </div>
 
-      <!-- Card 2 -->
-      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
-        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
-        <div class="p-5">
-          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
-          <p class="text-gray-600 text-sm mb-4">
-            Short description about the product goes here.
-          </p>
-          <div class="flex justify-between items-center">
-            <span class="text-lg font-bold text-indigo-600">$79</span>
-            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
-              Buy Now
-            </button>
-          </div>
-        </div>
-      </div>
+            <!-- <div class="bg-white rounded-lg shadow p-4">
+                <img src="https://via.placeholder.com/300x200" class="w-full h-40 object-cover rounded">
+                <h2 class="text-lg font-semibold mt-3">Product 2</h2>
+                <p class="text-gray-600 text-sm mt-1">Short description</p>
+                <p class="text-indigo-600 font-bold mt-2">$70</p>
+            </div>
 
-      <!-- Card 3 -->
-      <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition duration-300 overflow-hidden">
-        <img src="https://via.placeholder.com/400x250" class="w-full h-52 object-cover">
-        <div class="p-5">
-          <h2 class="text-xl font-semibold mb-2">Product Name</h2>
-          <p class="text-gray-600 text-sm mb-4">
-            Short description about the product goes here.
-          </p>
-          <div class="flex justify-between items-center">
-            <span class="text-lg font-bold text-indigo-600">$59</span>
-            <button class="bg-indigo-600 text-white px-4 py-2 rounded-lg hover:bg-indigo-700">
-              Buy Now
-            </button>
-          </div>
-        </div>
-      </div>
+            <div class="bg-white rounded-lg shadow p-4">
+                <img src="https://via.placeholder.com/300x200" class="w-full h-40 object-cover rounded">
+                <h2 class="text-lg font-semibold mt-3">Product 3</h2>
+                <p class="text-gray-600 text-sm mt-1">Short description</p>
+                <p class="text-indigo-600 font-bold mt-2">$90</p>
+            </div> -->
 
+        </div>
     </div>
 
 
